cluster/prod/apps/actual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-internal
  namespace: actual
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: [ "actual.k8s.lysakermoen.com" ]
      secretName: actual-internal-tls
  rules:
    - host: actual.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  number: 5006
